# lenc

./: README.md  configure.ac
src/: Makefile.am  app.h  encoder.cpp  encoder.h  main.cpp
