AC_PREREQ([2.69])
AC_INIT(lenc, 0.1, fanyunfeng@sina.com)
AC_CONFIG_SRCDIR([src/encoder.h])
AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC

# Checks for libraries.

# Checks for header files.
AC_CHECK_HEADERS([malloc.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_SIZE_T
AC_CHECK_HEADER_STDBOOL

# Checks for library functions.
AC_FUNC_MALLOC

AC_CONFIG_FILES(./Makefile
          ./src/Makefile)

AC_OUTPUT
